<resources>
    <string name="app_name">Souq Elebel</string>
    <string name="map_api_key">AIzaSyAeyMUJgKAhnNXbILHONb1um72CNzELFRY</string>
    <string name="map_key">AIzaSyAeyMUJgKAhnNXbILHONb1um72CNzELFRY</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="back">Back</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="send">Send</string>
    <string name="ok">OK</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="search2">Search</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="send_a_message">Send a message</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="wait">Wait...</string>
    <string name="profile">Profile</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="new_account">New Account</string>
    <string name="skip">Skip</string>
    <string name="code">Code</string>
    <string name="already_have_an_account">Already have an account !</string>
    <string name="field_required">Field required</string>
    <string name="pass_short">Password too short</string>
    <string name="inv_email">Invalid email</string>
    <string name="perm_img_denied">Permission denied</string>
    <string name="ch_img">Choose Image</string>
    <string name="update_profile">Update Profile</string>
    <string name="no_image">No Image</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="logout">Logout</string>
    <string name="send_code">send code</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm">confirm</string>
    <string name="resend">Resend</string>
    <string name="inv_sms_code">Invalid sms code</string>
    <string name="rate_app">Rate App</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_found">User is found</string>
    <string name="download">Download</string>
    <string name="inc_pas">Incorrect Password</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="favourite">Favorite</string>
    <string name="confirm2">Confirm</string>
    <string name="confirm3">Confirm</string>
    <string name="done">Done</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="main_department">Main department</string>
    <string name="sub_department">Sub department</string>
    <string name="whats_not_av">Not available</string>
    <string name="inv_whatsapp">Invalid whatsApp number</string>
    <string name="inv_url">Invalid url</string>
    <string name="contact_info">Contact info</string>
    <string name="location">Location</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="choose">Choose</string>
    <string name="ch_ad_img">Choose ad image</string>
    <string name="show">Show</string>
    <string name="country_code">Country code</string>
    <string name="most_seller">Most Seller</string>
    <string name="most_rate">Most Rate</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="shop_now">Shop now</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="news">News</string>
    <string name="city">City</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="payment">Payment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="select">Select</string>
    <string name="ch_date">Choose delivery date</string>
    <string name="ch_time">Choose delivery time</string>
    <string name="ch_payment_type">Choose payment type</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="keyword">Keyword</string>
    <string name="need_help">Need Help</string>
    <string name="my_orders">My Orders</string>
    <string name="current">Current</string>
    <string name="prevoius">Previous</string>
    <string name="no_search_results">No Search Results</string>
    <string name="area">Area</string>
    <string name="read_more">Read More</string>
    <string name="news_details">News  Details</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="sub_categoy">Sub Category</string>
    <string name="products">Products</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="view">View</string>
    <string name="my_favorite">My Favorite</string>
    <string name="delete_item">Delete Item ?</string>
    <string name="product_details"> Details</string>
    <string name="order_num">Order-Num</string>
    <string name="added_suc">"Added to cart"</string>
    <string name="cart_empty">Empty Cart</string>
    <string name="welcome_in_anaqa_phone">Welcome In Anaqa Phone</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="cannot_signup">Cannot sign up without accepting terms and conditions</string>
    <string name="favorite_offers">Favorite Offers</string>
    <string name="show_all">Show All</string>
    <string name="mobile_accessories">Mobile ِِِAccessories</string>
    <string name="return1">Return</string>
    <string name="charge">Charge</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="offers">Offers</string>
    <string name="filter">Filter</string>
    <string name="normal">Square</string>
    <string name="model_num">Model Number :</string>
    <string name="ryal">Ryal</string>
    <string name="shamil_daribat_alqimih_almudafih">(shamil daribat alqimih almudafih)</string>
    <string name="main_advantages">Main Advantages</string>
    <string name="overview">OverView</string>
    <string name="discount">discount</string>
    <string name="account_number">Account Number</string>
    <string name="account_iban">Account Iban</string>
    <string name="banks">Banks</string>
    <string name="visa">Visa</string>
    <string name="paypal">Paypal</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="status">status</string>
    <string name="total_cost">Total Cost</string>
    <string name="amount">amount</string>
    <string name="new_order">Pending</string>
    <string name="in_way">Charged</string>
    <string name="accepted">Accepted</string>
    <string name="refused">Refused</string>
    <string name="completed">Completed</string>
    <string name="not_found">Not Found</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="edit_profile">Edit profile</string>
    <string name="department">Departments</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="arrive">Arrive</string>
    <string name="without_arrive">Without Arrive</string>
    <string name="total_order_price">Total Order Price</string>
    <string name="products_price">Products Price</string>
    <string name="arrive_price">Arrive Price</string>
    <string name="vat">VAT</string>
    <string name="all_rights_reserved_for_anaqaphone">© All Rights Reserved For AnaqaPhone</string>
    <string name="colors">Color Name</string>
    <string name="contact_us_on_whatsapp">Contact Us On Whatsapp</string>
    <string name="cart_not_empty">Cart Not Empty</string>
    <string name="if_you">If YOU Close App Cart Will Delet</string>
    <string name="sizes">Memmory</string>
    <string name="select_color">Select Color</string>
    <string name="select_size">Select Memory</string>
    <string name="successfully_added_to_the_cart">Successfully added to the cart</string>
    <string name="enter_verification_code_sent_to">Enter verification code sent to</string>
    <string name="depts">Depts</string>
    <string name="family_box">Family Box</string>
    <string name="best_offers">Best Offers</string>
    <string name="personal_information">Personal Information</string>
    <string name="electronic_cards">Electronic Cards</string>
    <string name="descriptions">Descriptions</string>
    <string name="preparation_way">Preparation way</string>
    <string name="quantity">Quantity</string>
    <string name="my_reservations">My reservations</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="help">Help</string>
    <string name="version_no">Version Number</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="default1">Default</string>
    <string name="Become_a_partner">Become a partner</string>
    <string name="Social_Media">Social Media</string>
    <string name="no_data_found">No Data Found</string>
    <string name="what_are_you_looking_for">what are you looking for</string>
    <string name="become_a_partner_and_join_us_just_in_simple_steps">Become a partner and join us just in simple steps</string>
    <string name="send_order">Send Order</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reserve_now">أحجز الأن</string>
    <string name="reservation_details">تفاصيل الحجز</string>
    <string name="cost">Cost</string>
    <string name="days">Days</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="adviersment_photos">Ads Photos</string>
    <string name="my_advertisements">My Ads</string>
    <string name="not_av">Not available</string>
    <string name="add_ads">Add Ads</string>
    <string name="upload_ad_video"><![CDATA[Upload Ad Video <font color="#bababa">(59 seconds)</font>]]></string>
    <string name="upload_video">Upload Video</string>
    <string name="ad_price">Ad Price</string>
    <string name="ad_details">Ad details</string>
    <string name="max_ad_photo">Maximum 2 ad photos</string>
    <string name="choose_category">Choose category</string>
    <string name="vid_pem_denied">Video Permission Denied</string>
    <string name="length_video_shouldnot_exceed">Length of video shouldn\'t exceed 59 seconds</string>
    <string name="ad_name">Ad Name</string>
</resources>