<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvcart"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/red2"
        android:textSize="15sp"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray2" />

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/delete_item"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:weightSum="1"

        >

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight=".5"
            android:background="@drawable/delete_tv"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/red2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCancel"

            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight=".5"
            android:background="@drawable/delete_tv"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/gray6"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>

