<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="action"
            type="com.souqelebel.interfaces.Listeners.NextPreviousAction" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toTopOf="@id/ll"
            app:layout_constraintTop_toTopOf="parent"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/date_amp_time"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"

                >

                <LinearLayout
                    android:id="@+id/llDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:weightSum="1"


                    >

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".85"
                        android:clickable="false"
                        android:gravity="center_vertical"
                        android:hint="@string/delivery_date"
                        android:longClickable="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/gray4"
                        android:textSize="15sp"


                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".15"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="12dp"
                        android:src="@drawable/ic_calendar"
                        android:tint="@color/colorPrimary"


                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"

                >

                <LinearLayout
                    android:id="@+id/llTime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:weightSum="1"


                    >

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".85"
                        android:clickable="false"
                        android:gravity="center_vertical"
                        android:hint="@string/delivery_time"
                        android:longClickable="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/gray4"
                        android:textSize="15sp"


                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".15"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="12dp"
                        android:src="@drawable/ic_clock"
                        android:tint="@color/colorPrimary"


                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_primary_btn"
                android:onClick="@{()->action.onNext()}"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_white"
                android:onClick="@{()->action.onPrevious()}"
                android:text="@string/previous"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"

                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
